[gd_scene load_steps=4 format=3 uid="uid://cosb80or2npy4"]

[ext_resource type="Theme" uid="uid://5uq80ele5x1b" path="res://Assets/main_theme.tres" id="1_3f3ot"]
[ext_resource type="Script" uid="uid://w1gdiragrl2i" path="res://Scripts/Menu/world_select.gd" id="1_u1338"]
[ext_resource type="PackedScene" uid="uid://c1rwvhccj8sbd" path="res://Scenes/Menu/create_new_world_menu.tscn" id="3_3uk8j"]

[node name="WorldSelect" type="PanelContainer"]
anchors_preset = -1
anchor_left = 0.004
anchor_top = 0.008
anchor_right = 0.671
anchor_bottom = 0.6
offset_left = 0.39199972
offset_top = -0.18400002
offset_right = 0.0079956055
offset_bottom = 0.19998169
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3f3ot")
script = ExtResource("1_u1338")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="CreateNewWorld" type="Button" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
text = "Create New World"

[node name="Back" type="Button" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "X"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Worlds" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Worlds"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = -5
theme_override_constants/margin_right = -5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Worlds/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -1

[node name="CreateNewWorldMenu" parent="." instance=ExtResource("3_3uk8j")]
visible = false
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Buttons/CreateNewWorld" to="." method="_on_create_new_world_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Back" to="." method="_on_back_pressed"]
